Change img path-es and method of connecting 'style' libs

--- a/app/pages/common/header.html
+++ b/app/pages/common/header.html
@@ -1,8 +1,8 @@
 <div class="header">
 	<a href="#" class="header__logo">
 		<picture>
-			<source srcset='../../img/logo-mobile.svg' media="(max-width: 1180px)">
-			<img src="../../img/logo-desktop.svg" alt="logo">
+			<source srcset='img/logo-mobile.svg' media="(max-width: 1180px)">
+			<img src="img/logo-desktop.svg" alt="logo">
 		</picture>
 	</a>
 	<div class="main__slider-paggination"></div>
