--- a/app/pages/common/header.html
+++ b/app/pages/common/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-	<a href="#" class="header__logo">
+	<a href="" class="header__logo">
 		<picture>
 			<source srcset='img/logo-mobile.svg' media="(max-width: 1180px)">
 			<img src="img/logo-desktop.svg" alt="logo">
