--- a/app/pages/common/header.html
+++ b/app/pages/common/header.html
@@ -2,7 +2,7 @@
 	<a href="" class="header__logo">
 		<picture>
 			<source srcset='img/logo-mobile.svg' media="(max-width: 1180px)">
-			<img src="img/logo-desktop.svg" alt="logo">
+			<img src="img/logo-desktop.svg" loading="lazy" alt="logo">
 		</picture>
 	</a>
 	<div class="main__slider-paggination"></div>
