--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="css/libs.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.min.css">
 	<title>Document</title>
 </head>
 
@@ -24,8 +24,8 @@
 	</div>
 
 	<script src="js/libs.min.js"></script>
-	<script src="js/script.min.js"></script>
-	<script src="js/main.min.js"></script>
+	<script async src="js/script.min.js"></script>
+	<script async src="js/main.min.js"></script>
 </body>
 
 </html>
